--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0"; url="https://shultphotography.com">
+        <meta http-equiv="refresh" content="0; url=https://shultzphotography.com">
         <title>Redirecting...</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+                background: #f5f5f5;
+            }
+            p {
+                font-size: 18px;
+                color: #333;
+            }
+            a {
+                color: #0066cc;
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
-        <p>Redirecting to <a href="https://shultzphotography.com">shultzphotography.com</a></p>
+        <p>Redirecting to <a href="https://shultzphotography.com">shultzphotography.com</a>...</p>
     </body>
 </html>
